--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
